--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,3 +1,18 @@
+2010-07-27
+Made lots of changes
+Improved trigger API
+Improved initializing sequences
+	Got rid of setup function in common
+	Made settings more abstract and improved the API
+	Moved around modules in to different folders
+Finished implementing getid3 for archives
+Improved error API greatly
+	Improved printing out errors in template
+	Improved verbosity options in core and common
+Improved installation
+If dependencies fail, now shows standard error page
+	Setup is called even on failed required modules, it's really just for show anyways
+
 2010-07-21
 Finished implementing alter_query stuff
 Worked on forms API, moved all methods to include/forms.php
