--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,5 +1,7 @@
 ------------- MONOLITHICMEDIA TODO -------------
 ------------- GENERAL TODO -------------
+Running system from command line should change bootstrap options
+Under validate_request, process the module, then call rewrite_module() or rewrite_select() with the entire request, then finish validating
 Cron is not running properly again...
 IMPORTANT!  Convert all call_user_func_array usage to the standard callable method
 Finish webdav module that allows files to be uploaded and access using the web dav protocol.  This is already mostly supported by PEAR.
@@ -94,6 +96,7 @@ Figure out how template_path and modules_path is used in the javascript in the W
 Test modifications to extjs and wmp template script and link includes
 Finish mobile template.
 Finish Ampache XML API template
+Implement a GrooveShark clone template
 Work on finishing EXT JS template, and add more templates from Ampache, Jinzora, Subsonic, and WinAmp Remote
 ------------- DEFAULT -------------
 Add podcast list template
