git-svn-id: svn://localhost/Media%20Server@335 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,4 +1,10 @@
 2010-07-28
+Debugged menu system
+Debbuged a bunch of stuff
+Now I can add new features
+Made improvements to url() API
+
+2010-07-27
 Made big changes
 Added new menu API
 	Still needs work
