git-svn-id: svn://localhost/Media%20Server@348 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,5 +1,6 @@
 ------------- MONOLITHICMEDIA TODO -------------
 ------------- GENERAL TODO -------------
+Rate limiting on user login, recaptcha module
 IMPORTANT: Finish the configuaration for updates.php and implement new method of reporting changes like described above
 	See configure_balancer for more information
 Running system from command line should change bootstrap options
