git-svn-id: svn://localhost/Media%20Server@350 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,3 +1,7 @@
+2010-08-29
+Readded modules
+Finished alias configuration
+
 2010-08-24
 Refactored all alter_query code, now uses database filter_() functions
 Reorganized other database code in to sql_() functions
