--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,5 +1,15 @@
 ------------- MONOLITHICMEDIA TODO -------------
 ------------- GENERAL TODO -------------
+Make it faster
+	Enhance remove performance by only removing from tables that handle the file, remove by ID first, and if it isn't removed by ID, remove by filename
+Admin tools should provide an API and theme for tools to generate command line scripts
+	Maybe this should be included in CLI instead, so commands can be executed by tools
+Make different views for files, details view which displays a bunch of information
+	Integrate this in to the music management tool
+For non-jquery templates, an I-Frame could be used to perform the request and print out the template
+	on the CLI, the request could be made by the template, similar to the logo fetching and the ascii would be printed out
+	this may take too long, and maybe an API should be created in the tool output for performing all long-scripts sequentially
+		this would replace the singular functionality
 Check if add_all() id updating is working properly
 Fix archive library problem by specifying that it should update an archive if it has changed
 	If it fails, it won't try to do it again until the archive has changed
